--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "date-fns": "^2.28.0",
-    "next": "14.1.3",
+    "next": "latest",
     "react": "^18.1.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.1.0",
@@ -28,8 +28,5 @@
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.2"
-  },
-  "engines": {
-    "node": "18.x"
   }
 }
